--- a/06-StdErrors.Rmd
+++ b/06-StdErrors.Rmd
@@ -8,9 +8,9 @@ How *confident* should we be about the estimated values $b$?
 </center>
 ```
 <br>
-Let's go back to the regression with one variable and remind ourselves of the example at the end of chapter \@ref(linreg). There we introduced the term *confidence interval*, shown here as the shaded area:
+Let's go back to the regression with one variable and remind ourselves of the example at the end of chapter \@ref(linreg). There we introduced the term *confidence interval*, shown as the shaded area in figure \@ref(fig:confint):
 
-```{r,fig.align="center",message=FALSE,warning=FALSE,echo=FALSE}
+```{r confint,fig.align="center",message=FALSE,warning=FALSE,echo=FALSE}
 library(ggplot2)
 library(Ecdat)
 p <- ggplot(mapping = aes(x = str, y = testscr), data = Caschool) # base plot
@@ -58,7 +58,7 @@ Let's talk about the small but important modifications we applied to  model \@re
 * $\beta_0$ and $\beta_1$ and intercept and slope parameters
 * $\varepsilon$ is the error term.
 
-First, we *assumed* that \@ref(eq:abline-5) is the correct represenation of the DGP. With that assumption in place, the values $\beta_0$ and $\beta_1$ are the *true parameter values* which generated the data. Notice that $\beta_0$ and $\beta_1$ are potentially different from $b_0$ and $b_1$ in \@ref(eq:abline) for a given sample of data - they could in practice be very close to each other, but $b_0$ and $b_1$ are *estimates* of $\beta_0$ and $\beta_1$. And, crucially, those estimates are generated from a sample of data. Now, the fact that our data $(y_i,x_i)$ are a sample from a larger population, means that there will be *sampling variation* in our estimates - exactly like in the case of the sample mean estimating the population average as mentioned above. One particular sample of data will generate one particular set of estimates $b_0$ and $b_1$, whereas another sample of data will generate estimates which will in general be different - by *how much* those estimates differ across samples is the question in this chapter. In general, the more observations we have the greater the precision of our estimates, hence, the closer the estimates from different samples will lie together.
+First, we *assumed* that \@ref(eq:abline-5) is the correct represenation of the DGP. With that assumption in place, the values $\beta_0$ and $\beta_1$ are the *true parameter values* which generated the data. Notice that $\beta_0$ and $\beta_1$ are potentially different from $b_0$ and $b_1$ in \@ref(eq:abline) for a given sample of data - they could in practice be very close to each other, but $b_0$ and $b_1$ are *estimates* of $\beta_0$ and $\beta_1$. And, crucially, those estimates are generated from a sample of data. Now, the fact that our data $\{y_i,x_i\}_{i=1}^N$ are a sample from a larger population, means that there will be *sampling variation* in our estimates - exactly like in the case of the sample mean estimating the population average as mentioned above. One particular sample of data will generate one particular set of estimates $b_0$ and $b_1$, whereas another sample of data will generate estimates which will in general be different - by *how much* those estimates differ across samples is the question in this chapter. In general, the more observations we have the greater the precision of our estimates, hence, the closer the estimates from different samples will lie together.
 
 
 ### Standard Errors in Theory {#se-theory}
@@ -81,7 +81,13 @@ where $n-p$ are the *degrees of freedom* available in this estimation. $p$ is th
 Var(b_1|x_i) = \frac{SSR}{(n-p)\sum_i^N (x_i - \bar{x})^2}  (\#eq:var-ols2)
 \end{equation}
 
-You can clearly see that, as $n$ increases, the denominator increases, and therefore the variance of the estimate will decrease.
+We most of the time work directly with the *standard error* of a coefficient, hence we define
+
+\begin{equation}
+SE(b_1) = \sqrt{Var(b_1|x_i)} = \sqrt{\frac{SSR}{(n-p)\sum_i^N (x_i - \bar{x})^2}}  (\#eq:SE-ols2)
+\end{equation}
+
+You can clearly see that, as $n$ increases, the denominator increases, and therefore variance and standard error of the estimate will decrease.
 
 ### Standard Errors in Practice
 
@@ -129,7 +135,7 @@ We have encountered many statistics already: think of the sample mean, or the st
 Many test statistics rely on some notion of *standardizing* the sample data so that it becomes comparable to a theoretical distribution. We encountered this idea already in section \@ref(reg-standard), where we talked about a standardized regression. The most common standardization is the so-called *z-score*, which says that
 
 \begin{equation}
-\frac{x - \mu}{\sigma}\equiv z\sim \mathcal{N}(0,1), (#eq:zscore)
+\frac{x - \mu}{\sigma}\equiv z\sim \mathcal{N}(0,1), (\#eq:zscore)
 \end{equation}
 
 in other words, substracting the population mean from random variable $x$ and dividing by it's population standard deviation yields a standard normally distributed random variable, commonly called $z$.
@@ -137,7 +143,7 @@ in other words, substracting the population mean from random variable $x$ and di
 A very similar idea applies if we *don't know* the population  variance (which is our case here!). The corresponding standardization gives rise to the *t-statistic*, and it looks very similar to \@ref(eq:zscore):
 
 \begin{equation}
-\sqrt{n} \frac{\bar{x} - \mu}{s} \equiv T \sim t_{n-1} (#eq:tscore)
+\sqrt{n} \frac{\bar{x} - \mu}{s} \equiv T \sim t_{n-1} (\#eq:tscore)
 \end{equation}
 
 Several things to note:
@@ -149,14 +155,14 @@ Several things to note:
 
 
 
-### Confidence Intervals
+### Confidence Intervals {#CI}
 
 Back to our example now! We are clearly in need of some measure of *confidence* about our sample statistic $\bar{x} = `r xbar`$ before we communicate our result. It seems reasonable to inform the Director about $\bar{x}$, but surely we also need to tell him that there was considerable *dispersion* in the data: Some people were as short as `r round(min(height),2)`cm, while others were as tall as `r round(max(height),2)`cm! 
 
 The way to proceed is to construct a *confidence interval* about the true population mean $\mu$, based on $\bar{x}$, which will take this uncertainty into account. We will use the *t* statistic from above. We want to have a *symmetric interval* around $\bar{x}$ which contains the true value $\mu$ with probability $1-\alpha$. One very popular choice of $\alpha$ is $0.05$, hence we cover $\mu$ with 95% probability. After computing our statistic $T$ as defind in \@ref(eq:tscore), this interval is defined as follows:
 
 \begin{align}
-\Pr \left(-c \leq T \leq c \right) = 1-\alpha (#eq:ci)
+\Pr \left(-c \leq T \leq c \right) = 1-\alpha (\#eq:ci)
 \end{align}
 
 where $c$ stands for *critical value*, which we need to choose. This is illustrated in figure \@ref(fig:cifig).
@@ -205,14 +211,14 @@ node[above] {$t_{n-1}$};
 Given the symmetry of the *t* distribution it's enough to find $c$ at the upper tail: the point above which $\frac{\alpha}{2}$ of all probability mass of the $t_{df}$ distribution comes to lie. In other words, if $\mathcal{T}_{df}$ is the CDF of the *t* distribution with *df* degrees of freedom, we find $c$ as
 
 \begin{align}
-\mathcal{T}_{df}(c)\equiv& \Pr \left( T < c \right)  = 1-\frac{\alpha}{2} = 0.975 \\(#eq:ci1)
+\mathcal{T}_{df}(c)\equiv& \Pr \left( T < c \right)  = 1-\frac{\alpha}{2} = 0.975 \\(\#eq:ci1)
 c =& \mathcal{T}_{df}^{-1}(\mathcal{T}_{df}(c)) = \mathcal{T}_{df}^{-1}(0.975)
 \end{align}
 
 Here $\mathcal{T}_{df}^{-1}$ stands for the *quantile function*, i.e. the inverse of the CDF. In our example with $df = `r n-1`$, you can find thus that $c = `r round(qt(0.975,df=n-1),3)`$ by typing `qt(0.975,df=49)` into your `R` session.^[You often will see $c=1.96$, which comes from the fact that one relies on the *t* distribution converging to the normal distribution with large $n$. Type `qnorm(0.975)` to confirm!] Now we only have to expand the definition of the *T* statistic from \@ref(eq:tscore) inside \@ref(eq:ci) to obtain
 
 \begin{align}
-0.95 = 1-\alpha &= \Pr \left(-c \leq T \leq c \right) \\(#eq:ci2)
+0.95 = 1-\alpha &= \Pr \left(-c \leq T \leq c \right) \\(\#eq:ci2)
                 &= \Pr \left(-`r round(qt(0.975,df=n-1),3)` \leq \sqrt{n} \frac{\bar{x} - \mu}{s} \leq `r round(qt(0.975,df=n-1),3)` \right) \\
                  &= \Pr \left(\bar{x} -`r round(qt(0.975,df=n-1),3)` \frac{s}{\sqrt{n}} \leq \mu \leq \bar{x} + `r round(qt(0.975,df=n-1),3)` \frac{s}{\sqrt{n}} \right) 
 \end{align}
@@ -224,6 +230,8 @@ CI = \left[`r round(xbar - qt(0.975,df=n-1)* s/sqrt(n),3)` , `r round(xbar + qt(
 \end{equation}
 
 We would tell the director that with 95% probability, the true average height of all students comes to lie within those two bounds.
+
+Finally, looking back at figure \@ref(fig:confint) above, the shaded area is just the 95% confidence interval *about the true value $\beta_1$*. We would say that *the true regression line* is contained within the shaded region with 95% probability. Very similarly to our example of $\bar{x}$, in that picture we have instead an estimate $b_1$, with an associated standard error $SE(b_1)$. The shaded area is called *confidence band*, and it is just plotting the confidence interval *for each value $x$* in the data. You can see how the band becomes narrower (i.e. the estimate becomes more precise) if there is more data associated to a certain $x$.
 
 
 ## Hypothesis Testing
