--- a/13-slides.Rmd
+++ b/13-slides.Rmd
@@ -6,5 +6,7 @@
 * [chapter 3](http://rpubs.com/floswald/ScPoMetrics-3)
 * [chapter 4](slides/chapter4/chapter4.html)
 * [chapter 5](slides/chapter5/chapter5.html)
+* [chapter 6](slides/chapter6/chapter6.html)
+
 
 
